assets/css/style.css
* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Montserrat, sans-serif;
    font-weight: 300;
    color: #3a3a3a;
}

nav {
    width: 100%;
    background-color: #e5dedc;
    overflow: auto;
}
/* headings and logo */

h1, h2 {
    font-family: 'Playfair Display', sans-serif;
}

#logo {
    position: absolute;
    float: left;
    height: 60px;
    width: 60px;
    margin: 5px 20px;
    padding: 5px;
   }

/* navigation bar links */

#menu {
    float: right;
    font-size: 120%;
    letter-spacing: 2px;
}

#menu, #logo {
    line-height: 80px;
}

#menu li {
    display: inline;
    list-style-type: none;
    margin-right: 50px;
}

#menu a {
    text-decoration: none;
    color: #3a3a3a;
}

#menu a:hover {
    color: #3f4826;
    border-bottom:  2px solid #3a3a3a;
}

/*The Hero Image*/

.hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../images/hero-image.jpg');
    height: 600px;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.hero-text {
    font-size: xx-large;
    text-align: center;
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #DAE7E3;
}

/* Our Story Button */
.our-story {
    background-color: #2f594d;
    border-radius: 6px;
    color: white;
    padding: 12px 24px;
    margin: 20px auto;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 24px;
    transition-duration: 0.4s;
    width: 150px;
}

.our-story:hover {
    background-color: #1f3b33;
    color: white ;
}

/* Latest Blog Post Section */
#blog-posts {
    text-align: center;
    font-size: 300%;
    margin: 20px 0;
}

hr {
    border-top: 2px solid #3a3a3a;
    width: 30%;
    margin: 2px auto;
}

/* Flexbox-Container */
#latest-posts {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    align-content: center;
    margin: 40px auto;
}

.latest-posts-body {
    width: 25%;
    margin-bottom: auto;
}

.latest-posts-image {
    height: 300px;
    width: 100%;
    object-fit: cover;
}

.title-link {
    text-decoration: none;
    color: #3a3a3a;
}

.title-link:hover {
    color: #336053;
    border-bottom:  2px solid #3a3a3a;
}
.latest-posts-title {
    padding: 5px;
    text-align: center;
}

.latest-posts-body > hr {
    border-top: 2px solid #3a3a3a;
    width: 60%;
    margin: 2px auto;
}

.latest-posts-description {
    padding: 10px;
    text-align: center;
}

.title-link-2 {
    color: #3a3a3a;
    text-decoration: none;
    background-color: rgba(125, 146, 66, 0.2); 
    text-transform: uppercase; 
    font-weight: bold;
}

.title-link-2:hover {
    color: #7d9242;  
}

/* Newsletter Section */

#newsletter-section {
    width: 100%;
    background-color: #ffffff;
    margin: 50px auto;
}

#newsletter-box {
    width: 50%;
    margin: 0 auto;
    box-sizing: border-box;
    background-color: #7BA696;
    border-radius: 4px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center;
    justify-content: center;
}

#newsletter-image {
    width: 50%;
    background-color: #7BA696;
    text-align: center;
}

#newsletter-image img {
   width: 70%; 
   margin: 25px; 
   padding: 25px;
}

#newsletter-content {
    width: 50%;
    background-color: #F5F5F5;
    text-align: center;
    margin: 10px;
}

#newsletter-content h3{
    font-family: 'Playfair Display', sans-serif;
    font-size: xx-large;
    letter-spacing: 1px;
    padding: 30px 20px 0 20px;
    text-transform: uppercase;
    
}

#newsletter-content hr {
    border-top: 1px solid #3a3a3a;
    width: 80%;
    margin: 10px auto;
}

#newsletter-content p {
    letter-spacing: 1px;
    line-height: 25px;
    padding: 0 20px;
}

/*Form in Newletter section */

.newsletter-form {
    margin: 15px auto;
    max-width: 400px;
    position: relative;
}

.text-input {
    background-color: rgba(242, 193, 189, 0.7);
    width: 70%;
    height: 30px;
    margin: 5px 0 20px 0;
    padding-left: 5px;
    border: 1px solid rgb(58, 58, 58, 0.1);
    border-radius: 2px;
    outline: none;
    transition: 0.2s;
}

input::placeholder {
    letter-spacing: 1px;
    font-family: 'Montserrat', sans-serif;
    color: #3a3a3a;
}

.text-input:focus {
    border: 2px solid rgb(58, 58, 58,0.4)
}

.text-input:hover {
    transition: 0.4s;
    border-color: rgb(58, 58, 58,0.6);
}

.newsletter-button {
    margin-top: 5px;
    border-radius: 4px;
    padding: 12px 24px;
    text-align: center;
    font-size: 100%;
    background-color: #58A690;
    color: #ffffff;
    transition-duration: 0.4s;
    text-transform: uppercase;
    font-size: 110%;
}

.newsletter-button:hover {
    background-color: rgba(88, 166, 144, 0.8);
}

/* Footer */

footer {
    height: 80px;
    width: 100%;
    background-color: #e5dedc;
    overflow: auto;
}

.social-networks {
    text-align: center;
} 

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 220%;
    margin: 1%;
    padding: 0 20px;
    color: #3f4826;
}

/* About Us Section */

#about-us-heading {
    margin-top: 30px;
    font-size: 300%;
    text-align: center;
    text-transform: capitalize;
}

#about-us {
    height: 900px;
    width: 100%;
    background-color: #ffffff;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    align-content: center;
}


.about-us-content {
    height: 600px;
    width: 25%;
}

.about-us-content img {
    height: 300px;
    width: 100%;
    object-fit: contain;
    margin-bottom: 20px;
}

.about-us-content p {
    margin-top: 20px;
    line-height: 25px;
    letter-spacing: 1px;
}

#travel-heading {
    text-align: center;
    font-size: 300%;
    margin: 20px auto;
}

.travel-post {
    height: 800px;
    width: 100%;
}

.travel-post-heading {
    text-align: center;
    font-size: 150%;
    margin: 20px auto;
}

.travel-post img {
    display: block;
    height: 400px;
    width: 40%;
    text-align: center;
    margin: 30px auto;
}

